Skeleton UI does not show up when restarting for update
Categories
(Firefox :: General, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox89 | --- | fixed |
People
(Reporter: alexical, Assigned: alexical)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
This is because when we trigger a restart, we set the XRE_PROFILE_PATH env var. We could show the skeleton UI correctly if we either supported multiple profiles (bug 1685572), or if we can just detect if the current profile is the default profile, in which case we would not need to set XRE_PROFILE_PATH (or we could set an additional env var to let the skeleton UI know that we should still be okay to display it.)
Comment 1•5 years ago
|
||
When Firefox updates on startup, I see a very quick flash of the skeleton UI; is that also part of this bug?
Comment 2•5 years ago
|
||
To clarify: If there is an update waiting to install, and rather than clicking the "restart to update" button in the menu, you close the browser, regardless of how long you wait, the skeleton UI will quickly flash and then disappear for a few seconds before starting up.
| Assignee | ||
Comment 3•5 years ago
|
||
When restarting, we set the XRE_PROFILE_PATH env var. This normally would
prevent us from showing the skeleton UI. This patch just adds another env
var to indicate that we are restarting so the skeleton UI can know it's
safe to display.
Updated•5 years ago
|
Comment 5•5 years ago
|
||
| bugherder | ||
Description
•